compiler-frontend/lexing/tests/snapshots/lexer__keywords.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "ado\nas\ncase\nclass\ndata\nderive\ndo\nelse\nfalse\nforall\nforeign\nhiding\nif\nimport\nin\ninfix\ninfixl\ninfixr\ninstance\nlet\nmodule\nnewtype\nnominal\nof\nphantom\nrepresentational\nrole\nthen\ntrue\ntype\nwhere\n\nAdo.ado\nDo.do\n"
---
annotation : ""
 qualifier : ""
      kind : ADO
      text : "ado"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : AS
      text : "as"
  position : Position { line: 2, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : CASE
      text : "case"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : CLASS
      text : "class"
  position : Position { line: 4, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : DATA
      text : "data"
  position : Position { line: 5, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : DERIVE
      text : "derive"
  position : Position { line: 6, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : DO
      text : "do"
  position : Position { line: 7, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : ELSE
      text : "else"
  position : Position { line: 8, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : FALSE
      text : "false"
  position : Position { line: 9, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : FORALL
      text : "forall"
  position : Position { line: 10, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : FOREIGN
      text : "foreign"
  position : Position { line: 11, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : HIDING
      text : "hiding"
  position : Position { line: 12, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : IF
      text : "if"
  position : Position { line: 13, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : IMPORT
      text : "import"
  position : Position { line: 14, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : IN
      text : "in"
  position : Position { line: 15, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : INFIX
      text : "infix"
  position : Position { line: 16, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : INFIXL
      text : "infixl"
  position : Position { line: 17, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : INFIXR
      text : "infixr"
  position : Position { line: 18, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : INSTANCE
      text : "instance"
  position : Position { line: 19, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LET
      text : "let"
  position : Position { line: 20, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : MODULE
      text : "module"
  position : Position { line: 21, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : NEWTYPE
      text : "newtype"
  position : Position { line: 22, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : NOMINAL
      text : "nominal"
  position : Position { line: 23, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : OF
      text : "of"
  position : Position { line: 24, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : PHANTOM
      text : "phantom"
  position : Position { line: 25, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : REPRESENTATIONAL
      text : "representational"
  position : Position { line: 26, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : ROLE
      text : "role"
  position : Position { line: 27, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : THEN
      text : "then"
  position : Position { line: 28, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : TRUE
      text : "true"
  position : Position { line: 29, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : TYPE
      text : "type"
  position : Position { line: 30, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : WHERE
      text : "where"
  position : Position { line: 31, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : "Ado."
      kind : ADO
      text : "ado"
  position : Position { line: 33, column: 1 }
     error : None

annotation : "\n"
 qualifier : "Do."
      kind : DO
      text : "do"
  position : Position { line: 34, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 35, column: 1 }
     error : None
