compiler-frontend/lexing/tests/snapshots/lexer__operators.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "∷\n←\n→\n⇐\n⇒\n∀\n=\n:\n::\n.\n..\n<-\n->\n<=\n=>\n|\n@\n-\n\\\n`\n,\n"
---
annotation : ""
 qualifier : ""
      kind : DOUBLE_COLON
      text : "∷"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_ARROW
      text : "←"
  position : Position { line: 2, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_ARROW
      text : "→"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_THICK_ARROW
      text : "⇐"
  position : Position { line: 4, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_THICK_ARROW
      text : "⇒"
  position : Position { line: 5, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : FORALL
      text : "∀"
  position : Position { line: 6, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : EQUAL
      text : "="
  position : Position { line: 7, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : COLON
      text : ":"
  position : Position { line: 8, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : DOUBLE_COLON
      text : "::"
  position : Position { line: 9, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : PERIOD
      text : "."
  position : Position { line: 10, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : DOUBLE_PERIOD
      text : ".."
  position : Position { line: 11, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_ARROW
      text : "<-"
  position : Position { line: 12, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_ARROW
      text : "->"
  position : Position { line: 13, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_THICK_ARROW
      text : "<="
  position : Position { line: 14, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_THICK_ARROW
      text : "=>"
  position : Position { line: 15, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : PIPE
      text : "|"
  position : Position { line: 16, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : AT
      text : "@"
  position : Position { line: 17, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : MINUS
      text : "-"
  position : Position { line: 18, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : BACKSLASH
      text : "\\"
  position : Position { line: 19, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : TICK
      text : "`"
  position : Position { line: 20, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : COMMA
      text : ","
  position : Position { line: 21, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 22, column: 1 }
     error : None
