compiler-frontend/lexing/tests/snapshots/lexer__string.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "\"hello\"\n\n\"hello \\\" world\"\n\n\"hello \\\\ world\"\n\n\"hello \\n world\"\n\n\"hello\\\n\\world\"\n\n\"\"\"\"\"\"\n\n\"\"\"\"\"\"\"\n\n\"\"\"\"\"\"\"\"\n\n\"\"\"\"\"\"\"\"\"\"\n\n\"\"\"hello world\"\"\"\n"
---
annotation : ""
 qualifier : ""
      kind : STRING
      text : "\"hello\""
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : STRING
      text : "\"hello \\\" world\""
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : STRING
      text : "\"hello \\\\ world\""
  position : Position { line: 5, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : STRING
      text : "\"hello \\n world\""
  position : Position { line: 7, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : STRING
      text : "\"hello\\\n\\world\""
  position : Position { line: 9, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : RAW_STRING
      text : "\"\"\"\"\"\""
  position : Position { line: 12, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : RAW_STRING
      text : "\"\"\"\"\"\"\""
  position : Position { line: 14, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : RAW_STRING
      text : "\"\"\"\"\"\"\"\""
  position : Position { line: 16, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : RAW_STRING
      text : "\"\"\"\"\"\"\"\""
  position : Position { line: 18, column: 1 }
     error : None

annotation : ""
 qualifier : ""
      kind : STRING
      text : "\"\""
  position : Position { line: 18, column: 9 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : RAW_STRING
      text : "\"\"\"hello world\"\"\""
  position : Position { line: 20, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 21, column: 1 }
     error : None
