compiler-frontend/lexing/tests/snapshots/lexer__string_raw_eof.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "\"\"\"hello\n"
---
annotation : ""
 qualifier : ""
      kind : RAW_STRING
      text : "\"\"\"hello\n"
  position : Position { line: 1, column: 1 }
     error : Some("Unterminated triple quoted string literal")

annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 2, column: 1 }
     error : None
