compiler-frontend/lexing/tests/snapshots/lexer__tight_sequence.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "1+2+3\n"
---
annotation : ""
 qualifier : ""
      kind : INTEGER
      text : "1"
  position : Position { line: 1, column: 1 }
     error : None

annotation : ""
 qualifier : ""
      kind : OPERATOR
      text : "+"
  position : Position { line: 1, column: 2 }
     error : None

annotation : ""
 qualifier : ""
      kind : INTEGER
      text : "2"
  position : Position { line: 1, column: 3 }
     error : None

annotation : ""
 qualifier : ""
      kind : OPERATOR
      text : "+"
  position : Position { line: 1, column: 4 }
     error : None

annotation : ""
 qualifier : ""
      kind : INTEGER
      text : "3"
  position : Position { line: 1, column: 5 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 2, column: 1 }
     error : None
