compiler-frontend/lexing/tests/snapshots/lexer__upper.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "Type\n\nPrim.Type\n"
---
annotation : ""
 qualifier : ""
      kind : UPPER
      text : "Type"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : "Prim."
      kind : UPPER
      text : "Type"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 4, column: 1 }
     error : None
